# OpenPGP-Python

./: .cruft.json  CHANGELOG.md  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: test.yml
src/OpenPGP/: Crypto.py  __init__.py  _meta.py  _version.py  cryptography.py
tests/: api.py  lib.py  test_Crypto.py  test_OpenPGP.py  test_cryptography.py
