[metadata]
name = OpenPGP-Python
description = OpenPGP
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md
license = MIT

[aliases]
test = pytest

[tool:pytest]
addopts =
    --verbose
    --cov OpenPGP
    --pycodestyle
    --pydocstyle
    --flake8
    --isort
    --pylint
    --black
markers =
    unit
    integration
python_files = tests/*
mock_use_standalone_module = true
flake8-ignore = tests/* ALL

[isort]
multi_line_output = 3
include_trailing_comma = true
known_first_party = OpenPGP

[pycodestyle]
ignore =
    # Disable pycodestyle errors and warnings that we don't care about because
    # Black formats our code for us.
    E203,  # Whitespace before ':',
    E231,  # Missing whitespace after ',',
    E501,  # Line too long,
    W503,  # Line break before binary operator,

[pydocstyle]
match = src/.*\.py
ignore =
    # Missing docstrings.
    D100,D101,D102,D103,D104,D105,D106,D107,

    # "No blank lines allowed after function docstring" conflicts with
    # the Black code formatter, which insists on inserting blank lines after
    # function docstrings.
    D202,

    # "1 blank line required before class docstring" conflicts with another
    # pydocstyle rule D211 "No blank lines allowed before class docstring".
    D203,

    # Multi-line docstring summary should start at the first line, this
    # conflicts with another pycodestyle rule "Multi-line docstring summary
    # should start at the second line".
    D212,